--- a/lecture_2_search_based_path_finding/src/grid_path_searcher/CMakeLists.txt
+++ b/lecture_2_search_based_path_finding/src/grid_path_searcher/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(grid_path_searcher)
 
+set(CMAKE_BUILD_TYPE Release)
+
 find_package(catkin REQUIRED COMPONENTS
     roscpp
     std_msgs
