--- a/lecture_2_search_based_path_finding/src/grid_path_searcher/CMakeLists.txt
+++ b/lecture_2_search_based_path_finding/src/grid_path_searcher/CMakeLists.txt
@@ -33,8 +33,8 @@ set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -O3 -Wall") # -Wextra -Werror
 add_executable(demo_node
     src/demo_node.cpp
     src/Astar_searcher.cpp
-    src/read_only/JPS_utils.cpp
-    src/read_only/JPS_searcher.cpp
+    src/JPS_utils.cpp
+    src/JPS_searcher.cpp
     )
 
 target_link_libraries(demo_node
