--- a/lecture_3_sample_based_path_finding/src/grid_path_searcher/CMakeLists.txt
+++ b/lecture_3_sample_based_path_finding/src/grid_path_searcher/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(grid_path_searcher)
 
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
+
 find_package(catkin REQUIRED COMPONENTS 
     roscpp 
     std_msgs
