1.Add RRT staro of my version

--- a/lecture_3_sample_based_path_finding/src/grid_path_searcher/CMakeLists.txt
+++ b/lecture_3_sample_based_path_finding/src/grid_path_searcher/CMakeLists.txt
@@ -52,3 +52,12 @@ add_executable ( random_complex
 target_link_libraries( random_complex
     ${catkin_LIBRARIES}
     ${PCL_LIBRARIES} )  
+
+add_executable(compare_demo_node
+    src/compare_demo_node.cpp
+    src/RRT.cpp
+)
+target_link_libraries(compare_demo_node
+    ${catkin_LIBRARIES}
+    ${PCL_LIBRARIES}
+)
